--- a/brd.html
+++ b/brd.html
@@ -53,6 +53,7 @@
               type="checkbox"
               checked="checked"
               onclick="colorchange()"
+              onclick="commuting()"
             />
             <span class="slider round"></span>
           </label>
