--- a/brd.html
+++ b/brd.html
@@ -159,8 +159,8 @@
               height="30"
               fill="url(#Gradient1)"
             />
-            <text class="FrontColor" x="20" y="30" fill="white">33%</text>
-            <text class="FrontColor" x="100" y="30" fill="white">66%</text>
+            <text id="FrontColor1" class="FrontColor" x="20" y="30" fill="white">33%</text>
+            <text id="FrontColor2" class="FrontColor" x="100" y="30" fill="white">66%</text>
 
             <circle
               id="circle1"
