--- a/brd.html
+++ b/brd.html
@@ -64,12 +64,7 @@
             <label class="Front" id="berlinLabel">Berlin</label>
           </div>
           <div class="dropDown" id="dropDown">
-            <select
-              name="LandName"
-              id="LandName"
-              onchange="Linie()"
-              onchange="commuting()"
-            >
+            <select name="LandName" id="LandName" onchange="Linie()">
               <option value="Alle">Alle</option>
               <option value="Brandenburg an der Havel">
                 Brandenburg an der Havel
