Bugfix: NaN at svg for berlin

--- a/brd.html
+++ b/brd.html
@@ -63,8 +63,8 @@
             <label class="Front" id="berlinLabel">Berlin</label>
           </div>
           <div class="dropDown" id="dropDown">
-            <select name="LandName" id="LandName" onchange="Linie()">
-              <option value="Alle">Alle</option>
+            <select name="LandName" id="LandName" onchange="Linie() ">
+              <option value="Alle" selected>Alle</option>
               <option value="Brandenburg an der Havel">
                 Brandenburg an der Havel
               </option>
