--- a/brd.html
+++ b/brd.html
@@ -48,8 +48,9 @@
             <label class="Front" id="berlinLabel">Berlin</label>
           </div>
           <div class="dropDown" id="dropDown">
-            <select name="LandName" id="LandName" onchange="Linie() ">
-              <option value="Alle" selected>Alle</option>
+            <select name="LandName" id="LandName" onchange="Linie()">
+              <option value="-" style="display:none" selected>-</option>
+              <option value="Alle">Alle</option>
               <option value="Brandenburg an der Havel">
                 Brandenburg an der Havel
               </option>
@@ -111,29 +112,29 @@
         <div class="rectangle1" id="rectangle1">
           <label id="Gesamtanzahl" class="Text">Gesamtanzahl</label>
 
-          <label id="Anzahl" class="Front">NULL</label>
+          <label id="Anzahl" class="Front">0</label>
 
           <label id="Frauen" class="Text">Frauen</label>
           <div id="flexContainer" class="flexContainer">
-            <label id="Anzahl1" class="Front">10</label>
+            <label id="Anzahl1" class="Front">0</label>
             <label id="Strich1" class="Front">|</label>
-            <label id="Percent1" class="Front">10</label>
+            <label id="Percent1" class="Front">0</label>
           </div>
           <label id="Männer" class="Text">Männer</label>
           <div id="flexContainer1" class="flexContainer">
-            <label id="Anzahl2" class="Front">10</label>
+            <label id="Anzahl2" class="Front">0</label>
             <label id="Strich2" class="Front">|</label>
-            <label id="Percent2" class="Front">10</label>
+            <label id="Percent2" class="Front">0</label>
           </div>
 
           <label id="Auszubildender" class="Text">Auszubildender</label>
           <div id="flexContainer2" class="flexContainer">
-            <label id="Anzahl3" class="Front">10</label>
+            <label id="Anzahl3" class="Front">0</label>
             <label id="Strich3" class="Front">|</label>
-            <label id="Percent3" class="Front">10</label>
+            <label id="Percent3" class="Front"> 0</label>
           </div>
           <div id="Verhaeltnis" class="flexContainer1">
-            <label id="Verhaeltnis" class="Front">Verhaeltnis</label>
+            <label id="Verhaeltnis" class="Front">Verhältnis</label>
           </div>
           <div id="Pendlerlabel" class="flexContainer1">
             <label class="Front" id="Penderbewegung"
@@ -165,7 +166,7 @@
               y="30"
               fill="white"
             >
-              33%
+              50%
             </text>
             <text
               id="FrontColor2"
@@ -174,7 +175,7 @@
               y="30"
               fill="white"
             >
-              66%
+              50%
             </text>
 
             <circle
