change menu color

--- a/brd.html
+++ b/brd.html
@@ -144,9 +144,9 @@
           <svg width="200" height="200">
             <defs>
               <linearGradient id="Gradient1" x2="100%" y2="0%">
-                <stop id="stop1" offset="50%" stop-color="rgb(120,120,255)" />
-                <stop id="stop2" offset="50%" stop-color="rgb(50,50,255)" />
-                <stop id="stop3" offset="100%" stop-color="rgb(50,50,255)" />
+                <stop id="stop1" offset="50%" stop-color="#00A3FF" />
+                <stop id="stop2" offset="50%" stop-color="#5079A0" />
+                <stop id="stop3" offset="100%" stop-color="#5079A0" />
               </linearGradient>
             </defs>
             <rect
@@ -182,7 +182,7 @@
               cx="10"
               cy="50"
               r="5"
-              fill="rgb(120,120,255)"
+              fill="#00A3FF"
               stroke="black"
             />
             <text class="FrontColor" x="20" y="54" font-size="9px" fill="white">
@@ -193,7 +193,7 @@
               cx="100"
               cy="50"
               r="5"
-              fill="rgb(50,50,255)"
+              fill="#5079A0"
               stroke="black"
             />
             <text
